Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

13-Nov-2009 Ron Severdia
^ Menu Manager UI fixes
# Menu item modal fixes
+ Added missing language strings/keys

13-Nov-2009 Andrew Eddie
 ^ Fixed inflection on JForm field names:
   - accesslevels -> accesslevel
   - cachehandlers -> cachehandler
   - categories -> category
   - componentlayouts -> componentlayout
   - contentlanguages -> contentlanguage
   - helpsites -> helpsite
   - integers -> integer
   - languages -> language
   - modulelayouts -> modulelayout
   - sessionhandlers -> sessionhandler
   - timezones -> timezone
   - usergroups -> usergroup
 ^ Changed system debug fields to show new field group capabilities.
 ^ Updated plugin XML files from <params> to <fields>
 ^ Added access controls to com_plugins and refactored MVC.
 # Fixed bug in JFormFieldList adding double [] to multiple select lists.
 ^ Added JTableExtension::publish override.
 ^ Added some of Arlen's tweeks to loader.php

12-Nov-2009 Andrew Eddie
 # Fix missing language strings in permissions widget.
 ^ Update MVC for com_redirect.
 ^ Change com_content article view to throw a hard 404 if an article not found (or not published).

11-Nov-2009 Mark Dexter
# Fix bug showing current value of request parameters in menu items

11-Nov-2009 Elin Waring
# Fix up comments and URL issues in com_weblinks

10-Nov-2009 Elin Waring
# Miscellaneous cleanup in weblinks, newsfeed, content, language strings
# Tidy up com_menus, delete beez and khepri ini files

10-Nov-2009 Mark Dexter
# Minor HTML validation issue in mod_login

05-Nov-2009 Ron Severdia
^ Template Manager UI cleanup, new images
# Module Manager image fix

05-Nov-2009 Andrew Eddie
 ^ NOTE. Backward incompatible change in the argument list for JEditor::display