@@ -66,7 +66,7 @@ class ContactViewContact extends JView
 		JToolBarHelper::addNew('contact.save2new', 'JToolbar_Save_and_new');
 				// If an existing item, can save to a copy.
 		if (!$isNew) {
-			JToolBarHelper::custom('contact.save2copy','save-new.png', 'save-new_f2.png', 'JToolbar_Save_as_copy',false );
+			JToolBarHelper::custom('contact.save2copy','save-copy.png', 'save-copy_f2.png', 'JToolbar_Save_as_copy',false );
 		}
 
 		if (empty($this->item->id))  {
