@@ -71,7 +71,7 @@ class UsersViewLevels extends JView
 		{
 			JToolBarHelper::preferences('com_users');
 		}
-
+		JToolBarHelper::divider();
 		JToolBarHelper::help('screen.users.levels');
 	}
 }
