@@ -65,4 +65,4 @@ YOU MUST PROVIDE A BANNER NAME.=You must provide a banner name.
 FILTER RESET=Reset
 
 
-COM_BANNERS_CONFIGURATION=Banner Manager Settings
+COM_BANNERS_CONFIGURATION=Banner Manager Options
