@@ -23,13 +23,12 @@ CONTACT_NAME_LABEL=Name (Required)
 
 CONTACT_NEW_CONTACT=New Contact
 CONTACT_OPTIONS=Options
-CONTACT_FIELDSET_METADATA= Metadata
+CONTACT_FIELDSET_METADATA=Metadata
 CONTACT_FIELDSET_OPTIONS=Display Options
 CONTACT_FIELDSET_CONTACT_FORM=Contact Form Options
 
-Contact_Details=Contact Details
 CONTACT_DETAILS=Contact Information
-
+CONTACT_SELECT_USER=Select User
 CONTACT_EDIT_DETAILS=Edit contact information for display on the individual page.
 CONTACT_DISPLAY_DETAILS=Display options for the individual contact page.
 
@@ -92,7 +91,8 @@ CONTACT_ICONS_OPTIONS_ICONS=Icons
 CONTACT_ICONS_SETTINGS_DESC=Choose whether to display icons, text or nothing next to the information.
 CONTACT_CONFIG_TABLE_OF_CONTACTS=Table of Contacts Settings
 CONTACT_ICON_SETTINGS=Icon Settings
-COM_CONTACT_CONFIGURATION=Global Configuration
+
+COM_CONTACT_CONFIGURATION=Contact Manager Options
 CONTACT_CONFIG_EMAIL_DESC=Email Desc
 CONTACT_CONFIG_EMAIL_LABEL=Email
 CONTACT_CONFIG_FAX_DESC=Fax
@@ -106,6 +106,7 @@ CONTACT_CONFIG_TABLE_HEADINGS_DESC=Table Headings
 CONTACT_CONFIG_TABLE_HEADINGS_LABEL=Table Headings
 CONTACT_CONFIG_TELEPHONE_DESC=Telephone
 
+CONTACT_NAME_DESC=Contact Name
 CONTACT_CONFIG_BANNED_EMAIL_DESC=Banned Email Desc
 CONTACT_CONFIG_BANNED_EMAIL_LABEL=Banned Email
 CONTACT_CONFIG_BANNED_SUBJECT_DESC=Banned Subject DESC
@@ -131,117 +132,6 @@ CONTACT_SHOW_EMAIL_ADDRESS_LABEL=Email Address
 
 CONTACT_CONTACT_DETAILS=Information for this contact
 
-
-
-CONTACT_ACCESS_HEADING=Access
-CONTACT_CATEGORY_HEADING=Category
-CONTACT_ORDER_HEADING=Order
-CONTACT_STATE_HEADING= State
-CONTACT_TITLE_HEADING= Title
-CONTACT_SEARCH_IN_NAME=Search contacts by name
-CONTACT_SUBMENU_CATEGORIES=Contact Categories
-CONTACT_SUBMENU_CONTACTS=Contacts
-
-CONTACT_MANAGER_CONTACTS=Contact Manager
-CONTACT_MANAGER_CONTACT=Contact
-CONTACT_NAME_LABEL=Name (Required)
-CONTACT_EDIT_CONTACT=Edit Contact
-
-CONTACT_NEW_CONTACT=New Contact
-CONTACT_OPTIONS=Options
-CONTACT_FIELDSET_METADATA= Metadata
-CONTACT_FIELDSET_OPTIONS=Display Options
-CONTACT_FIELDSET_CONTACT_FORM=Contact Form Options
-
-CONTACT_INFORMATION_ADDRESS_DESC=Contact's Address
-CONTACT_INFORMATION_ADDRESS_LABEL=Address
-CONTACT_INFORMATION_COUNTRY_DESC=Contact's Country
-CONTACT_INFORMATION_COUNTRY_LABEL=Country
-CONTACT_INFORMATION_EMAIL_DESC=Contact's Email
-CONTACT_INFORMATION_EMAIL_LABEL=Email
-CONTACT_INFORMATION_MISC_DESC=Contact's Miscellaneous Information
-CONTACT_INFORMATION_MISC_LABEL=Other Information
-CONTACT_INFORMATION_MOBILE_DESC=Contact's Mobile
-CONTACT_INFORMATION_MOBILE_LABEL=Mobile
-CONTACT_INFORMATION_POSITION_DESC=Contact's Position
-CONTACT_INFORMATION_POSITION_LABEL=Position
-CONTACT_INFORMATION_POSTCODE_DESC=Contact's Postal Code
-CONTACT_INFORMATION_POSTCODE_LABEL=Postcode
-CONTACT_INFORMATION_STATE_DESC=Contact's State or Province
-CONTACT_INFORMATION_STATE_LABEL=State or Province
-CONTACT_INFORMATION_SUBURB_DESC=Contact's Suburb or City
-CONTACT_INFORMATION_SUBURB_LABEL=Suburb or City
-CONTACT_INFORMATION_TELEPHONE_DESC=Contact's Telephone
-CONTACT_INFORMATION_TELEPHONE_LABEL=Telephone
-CONTACT_INFORMATION_WEBPAGE_DESC=Contact's Webpage
-CONTACT_INFORMATION_WEBPAGE_LABEL=Webpage
-CONTACT_LINKED_USER_DESC=Linked Joomla! User
-CONTACT_LINKED_USER_LABEL=Linked User
-CONTACT_PARAMS_CONTACT_POSITION_E-MAIL_LABEL=Contact  E-mail
-CONTACT_PARAMS_CONTACT_POSITION_LABEL=Contact Position
-CONTACT_PARAMS_COUNTRY_LABEL=Country
-CONTACT_PARAMS_FAX_LABEL=Fax
-CONTACT_PARAMS_IMAGE_LABEL=Image
-CONTACT_PARAMS_MISC INFO_LABEL=Misc Info
-CONTACT_PARAMS_MOBILE_LABEL=Mobile
-CONTACT_PARAMS_NAME_DESC=Name Desc
-CONTACT_PARAMS_NAME_LABEL=Name
-CONTACT_PARAMS_POST/ZIP_CODE_LABEL=Post/Zip Code
-CONTACT_PARAMS_STATE/COUNTY_LABEL=State/County
-CONTACT_PARAMS_TELEPHONE_LABEL=Telephone
-CONTACT_PARAMS_TOWN/SUBURB_LABEL=Town/Suburb
-CONTACT_PARAMS_WEBPAGE_LABEL=Webpage
-CONTACT_PARAMS_STREET_ADDRESS_LABEL=Street Address
-
-CONTACT_ICONS=Icon Options
-CONTACT_ICONS_OPTIONS_NONE=None
-CONTACT_ICONS_OPTIONS_TEXT=Text
-CONTACT_ICONS_ADDRESS_DESC=Select Address Icon
-CONTACT_ICONS_ADDRESS_LABEL=Address
-CONTACT_ICONS_EMAIL_DESC=Select Email Icon
-CONTACT_ICONS_EMAIL_LABEL=Email
-CONTACT_ICONS_FAX_DESC=Select Fax Icon
-CONTACT_ICONS_FAX_LABEL=Fax
-CONTACT_ICONS_MISC_INFO_DESC=Select Other Information Icon
-CONTACT_ICONS_MISC_LABEL=Other Information
-CONTACT_ICONS_MOBILE_DESC=Select Mobile Icon
-CONTACT_ICONS_MOBILE_LABEL=Mobile
-CONTACT_ICONS_TELEPHONE_DESC=Select Telephone Icon
-CONTACT_ICONS_TELEPHONE_LABEL=Telephone
-CONTACT_ICONS_OPTIONS_ICONS=Icons
-CONTACT_ICONS_DESC=Choose whether to display icons, text or nothing next to the information.
-COM_CONTACT_CONFIGURATION=Global Configuration
-CONTACT_CONFIG_EMAIL_DESC=Email Desc
-CONTACT_CONFIG_EMAIL_LABEL=Email
-CONTACT_CONFIG_FAX_DESC=Fax
-CONTACT_CONFIG_FAX_LABEL=Fax
-CONTACT_CONFIG_MOBILE_DESC=Mobile
-CONTACT_CONFIG_MOBILE_LABEL=Mobile
-CONTACT_CONFIG_PHONE_LABEL=Phone
-CONTACT_CONFIG_POSITION_DESC=Position
-CONTACT_CONFIG_POSITION_LABEL=Position
-CONTACT_CONFIG_TABLE_HEADINGS_DESC=Table Headings
-CONTACT_CONFIG_TABLE_HEADINGS_LABEL=Table Headings
-CONTACT_CONFIG_TELEPHONE_DESC=Telephone
-
-CONTACT_CONFIG_BANNED_EMAIL_DESC=Banned Email Desc
-CONTACT_CONFIG_BANNED_EMAIL_LABEL=Banned Email
-CONTACT_CONFIG_BANNED_SUBJECT_DESC=Banned Subject DESC
-CONTACT_CONFIG_BANNED_SUBJECT_LABEL=Banned Subject
-CONTACT_CONFIG_BANNED_TEXT_DESC=Banned Text DESC
-CONTACT_CONFIG_BANNED_TEXT_LABEL=Banned Tex
-CONTACT_CONFIG_CUSTOM_REPLY=Custom Reply
-CONTACT_CONFIG_CUSTOM_REPLY_DESC=Custom Reply Desc
-CONTACT_CONFIG_SESSION_CHECK_DESC=Session Check DESC
-CONTACT_CONFIG_SESSION_CHECK_LABEL=Session Check
-
-CONTACT_CONFIG_CONTACT_FORM=Contact Form
-CONTACT_CONFIG_INDIVIDUAL_CONTACT_DISPLAY=Individual Contact Display
-CONTACT_CONTIG_TABLE_OF_CONTACTS=Table of Contacts Display
-
-
-CONTACT_CONTACT_DETAILS=Information for this contact
-
 CONTACT_EMAIL_BANNED_EMAIL_DESC=Email addresses not allowed to submit contact form.
 CONTACT_EMAIL_BANNED_EMAIL_LABEL=Banned Email
 CONTACT_EMAIL_BANNED_SUBJECT_DESC=Subjects not allowed in contact form
@@ -252,7 +142,7 @@ CONTACT_NAME_DESC=Contact Name
 CONTACT_EMAIL_DESCRIPTION_TEXT_DESC=Contact Email Description Text Desc
 CONTACT_EMAIL_DESCRIPTION_TEXT_LABEL=Email Description Text
 CONTACT_EMAIL_EMAIL_COPY_DESC=Allow Email Copy
-CONTACT_EMAIL_EMAIL_COPY_LABEL=Send copy to the submitter
+CONTACT_EMAIL_EMAIL_COPY_LABEL=Send copy to submitter
 CONTACT_EMAIL_SHOW_FORM_LABEL=Show Contact Form
 CONTACT_PARAMS_VCARD_LABEL=Show vCard
 CONTACT_EMAIL_SHOW_FORM_DESC=Text to display with the contact form
@@ -278,3 +168,5 @@ CONTACT_LINKE_NAME_DESC=An additional link for this contact
 CONTACT_LINKE_LABEL=Link URL
 
 COM_CONTACT_CONTACT_VIEW_ALIAS=Alias
+
+
