@@ -4,7 +4,7 @@
 # License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 # Note : All ini files need to be saved as UTF-8 - No BOM
 
-COM_CONTENT_CONFIGURATION=Article Manager Configuration
+COM_CONTENT_CONFIGURATION=Article Manager Options
 
 ARTICLE_DETAILS=Article Details
 
