@@ -218,5 +218,5 @@ EXTENSION TYPE=Extension Type
 NEW INSTALL=New install
 N/A=N/A
 
-COM_INSTALLER_CONFIGURATION=Extension Manager Settings
+COM_INSTALLER_CONFIGURATION=Extension Manager Options
 
