@@ -54,4 +54,4 @@ LANGS_FIELD_TITLE_LABEL=Title
 LANGS_FIELD_TITLE_NATIVE_DESC=Title Native Desc
 LANGS_FIELD_TITLE_NATIVE_LABEL=Title Native
 
-COM_LANGUAGES_CONFIGURATION=Language Manager Settings
+COM_LANGUAGES_CONFIGURATION=Language Manager Options
