@@ -4,7 +4,7 @@
 # License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 # Note : All ini files need to be saved as UTF-8 - No BOM
 
-COM_MEDIA_CONFIGURATION=Media Manager Settings
+COM_MEDIA_CONFIGURATION=Media Manager Options
 
 
 MAXIMUM_SIZE=Maximum Size
