@@ -144,6 +144,6 @@ MENUS_HEADING_EDIT_LINK=Edit Settings
 MENU_ADVANCED_MENU_OPTIONS=Advanced Menu Options
 MENU_ITEM_MODULE_ASSIGNMENT=Module Assignment
 
-COM_MENUS_CONFIGURATION=Menu Settings
+COM_MENUS_CONFIGURATION=Menu Manager Options
 
 
