@@ -78,7 +78,7 @@ WARNMODULES=cannot be deleted they can only be uninstalled as they are core modu
 WHO\'S ONLINE=Who's Online
 YOU CAN ONLY PREVIEW NEW MODULES.=You can only preview new modules.
 
-COM_MODULES_CONFIGURATION=Module Manager Settings
+COM_MODULES_CONFIGURATION=Module Manager Options
 
 
 
