@@ -71,4 +71,4 @@ NEWSFEEDS_TABLE_HEADINGS_LABEL=Table Headings
 NEWSFEEDS_WORD_COUNT_DESC=How many words to include in an item
 NEWSFEEDS_WORD_COUNT_LABEL=Word Count
 
-COM_NEWSFEEDS_CONFIGURATION=News Feed Manager Settings
+COM_NEWSFEEDS_CONFIGURATION=News Feed Manager Options
