@@ -4,7 +4,7 @@
 # License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 # Note : All ini files need to be saved as UTF-8 - No BOM
 
-COM_PLUGINS_CONFIGURATION=Plug-in Manager Settings
+COM_PLUGINS_CONFIGURATION=Plug-in Manager Options
 
 PLUGN_MANAGER_PLUGINS=Plugins Manager: Plugins
 PLUGN_MANAGER_PLUGIN=Plugins Manager: Plugin
