@@ -4,7 +4,7 @@
 ; @copyright	Copyright (C) 2005 - 2009 Open Source Matters, Inc. All rights reserved.
 ; @license		GNU General Public License version 2 or later; see LICENSE.txt
 
-COM_REDIRECT_CONFIGURATION=Redirect Component Options
+COM_REDIRECT_CONFIGURATION=Redirect Manager Options
 
 REDIR_MANAGER_LINKS=Redirect Manager: Links
 REDIR_PLUGIN_DISABLED=Link redirection plugin is disabled
