@@ -20,4 +20,4 @@ SEARCH_LOGGING_ENABLED=Search Logging Enabled
 SEARCH_LOGGING_DISABLED=Search Logging Disabled
 SEARCH_NO_RESULTS=Off
 
-COM_SEARCH_CONFIGURATION=Search Settings
+COM_SEARCH_CONFIGURATION=Search Manager Options
