@@ -140,6 +140,6 @@ CANNOT ASSIGN ADMINISTRATOR TEMPLATE=Cannot assign an administrator template.
 PARAMSWRITABLE=The parameter file %s is <font color="green">writable</font>!
 PARAMSUNWRITABLE=The parameter file %s is <font color="red">unwritable</font>!
 
-COM_TEMPLATES_CONFIGURATION=Template Manager Settings
+COM_TEMPLATES_CONFIGURATION=Template Manager Options
 
 
