@@ -224,7 +224,7 @@ USERS_MAIL_SUBJECT_PREFIX_TIP=This gets added in front of each mail subject
 USERS_MAIL_SUBJECT=Subject
 USERS_MAIL_THE_MAIL_COULD_NOT_BE_SENT=The mail could not be sent
 
-COM_USERS_CONFIGURATION=User Settings
+COM_USERS_CONFIGURATION=User Manager Options
 
 
 
