@@ -20,11 +20,11 @@ WEBLINKS_TITLE_HEADING=Title
 WEBLINKS_FILTER_CATEGORY=Filter Category
 WEBLINKS_FILTER_STATE=Filter State
 WEBLINKS_SEARCH_IN_TITLE=Search in title
-WEBLINKS_MANAGER_WEBLINKS=Weblinks Manager: Weblinks
-WEBLINKS_MANAGER_WEBLINK=Weblinks Manager: Weblink
+WEBLINKS_MANAGER_WEBLINKS=Web Links Manager: Web Links
+WEBLINKS_MANAGER_WEBLINK=Web Links Manager: Web Link
 WEBLINKS_OPTION_REPORTED=Reported
 
-WEBLINKS_ALIAS_DESC=Weblinks Alias Desc
+WEBLINKS_ALIAS_DESC=Web Links Alias Desc
 WEBLINKS_ALIAS_LABEL=Alias
 WEBLINKS_CATEGORY_DESC=Category Desc
 WEBLINKS_CATEGORY_LABEL=Category
@@ -41,8 +41,8 @@ WEBLINKS_TITLE_LABEL=Title
 WEBLINKS_URL_DESC=Url Desc
 WEBLINKS_URL_LABEL=Url
 
-WEBLINKS_EDIT_WEBLINK=Edit Weblink
+WEBLINKS_EDIT_WEBLINK=Edit Web Link
 WEBLINKS_OPTIONS=Options
 
-COM_WEBLINKS_CONFIGURATION=Weblinks Settings
+COM_WEBLINKS_CONFIGURATION=Web Links Manager Options
 
