@@ -33,6 +33,7 @@ JDENY_INHERITED=Deny (Inherited)
 JINHERIT=Inherit
 JINHERIT_UNSET=...
 JCURRENT=Current
+JSELECT=Select
 
 JINVALID_TOKEN=The most recent request was denied because it contained an invalid security token. Please refresh the page and try again.
 JERROR_NO_ITEMS_SELECTED=No item(s) selected.
